# pv_view

./: CMakeLists.txt  README.md  sdkconfig.defaults
data/: ap.html
main/: CMakeLists.txt  application.cpp  dashboard.h  display_driver.cpp  display_driver.h  dspl_task.cpp  dspl_task.h  hardware.h  idf_component.yml  json_serializer.h  literals.h  mqtt_queue_data.h  mqtt_task.cpp  sd_card.h  shoelace.h  time_task.cpp  time_task.h  utils.h  web_task.cpp  wifi_scanner.h
partition_table/: partition_table.csv
